--- a/static/js/package.json
+++ b/static/js/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "chart.js": "^1.0.2",
+    "emojione": "^2.1.1",
     "ga-browser": "^1.0.0",
     "jdenticon": "^1.3.2",
     "jquery": "2.1.4",
